--- a/style.css
+++ b/style.css
@@ -10,15 +10,27 @@
     font-family: ds-bold;
     src: url(fonte/OptimusPrincepsSemiBold.ttf);
 }
+@font-face {
+    font-family: ds-ui;
+    src: url(fonte/FOT-Matisse\ Pro\ M.otf);
+}
+
 body{
     background-color: black;
 }
+#index-body{
+    background-image: url(img/body-bg.PNG);
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+}
 #cabe{
     margin: 0vw 5vw 0vw 5vw;
-    height: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 #logo{
-    margin-top: 3.5vh;
+    /* margin-top: 3.5vh; */
     height: 13vh;
     display: inline-block;
 }
@@ -30,9 +42,7 @@ header{
 }
 #nome{
     display: inline-block;
-    margin-top: 6.4vh ;
-    vertical-align: top;
-    height: 10vh;
+    /* margin-top: 6.4vh ; */
     background-image: url(img/linha.png);
     background-size: contain;
     background-repeat: repeat-x;
@@ -48,17 +58,14 @@ header{
     color: white;
     font-family: ds;
     font-size: 3vh;
-
 }
 a{
     text-decoration: none;
 }
 #top{
     width: 100%;
-    height: 30vh;
-    line-height: 27vh;
-    background-image: url(img/bg-top.jpg);
-    background-size: 100% 100%;
+    height: 10vh;
+    display: flex;
 }
 #wc{
     margin: auto;
@@ -66,40 +73,74 @@ a{
     font-family: ds;
     font-size: 3vh;
     color: white;
+    padding: 1vh;
     vertical-align: middle;
     background-image: url(img/linha-g.png);
     background-position-y: center;
     background-position-x: center;
-    background-repeat: no-repeat;
+    width: 65vw;
+    background-size: auto 100%;
 }
 #middle{
-    height: 40vh;
+    min-height: 80vh;
     width: 100%;
-    background-image: url(img/bg-middle.jpg);
-    background-size: 100% 60vh;
-    background-repeat: repeat-y;
+}
+#cat-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 90vw;
+    margin: auto;
+    justify-items: center;
+}
+.cat-link{
+    height: 13vw;
+    display: block;
+    width: 10vw;
+    text-align: center;
+    font-family: ds-ui;
+    color: #604317;
+    font-size: 1.3vw;
+    line-height: 100%;
+}
+.cat{
+    height: 10vw;
+    display: block;
+    width: 10vw;
+    text-align: center;
+    background-image: url(img/cat-bg.PNG);
+    background-size: 100% 100%;
+}
+.cat:hover{
+    background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(224,190,90,0.5579481792717087) 75%, rgba(158,125,56,0.768032212885154) 100%);
+
+}
+.cat-img{
+    height: 9vw;
+    margin: auto;
+    margin-top: 1vw;
+
 }
 .hover-bg{
     background-image: url(img/hover-bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100% ;
-    width: 730px;
-    height: 700px;
-    margin: auto;
-    overflow: hidden;
+    width: 45vw;
+    height: 45vw;
+    display: inline-block;
+    overflow: auto;
 }
 #hover-nome{
-    margin-left: 100px;
-    margin-top: 50px;
+    margin-left: 6.5vw;
+    margin-top: 3.5vw;
     color: white;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: ds;
 
 }
 #hover-grid{
-    margin-left: 70px;
-    margin-right: 85px;
-    margin-top: 60px;
+    margin-left: 4.2vw;
+    margin-right: 5.1vw;
+    margin-top: 4vw;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
 }
@@ -107,9 +148,12 @@ a{
     background-image: url(img/dish.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    border: 10px solid transparent;
+    border: 0.8vw solid transparent;
     border-image: url(img/border.png) 10% stretch;
     box-sizing: border-box;
+}
+.icon:hover{
+    background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(224,190,90,0.5579481792717087) 75%, rgba(158,125,56,0.768032212885154) 100%);
 }
 .icon-a{
     display: block;
@@ -117,11 +161,153 @@ a{
 }
 .hover-foto{
     margin: auto;
-    width: 70px;
-    height: 85px;
+    width: 5.5vw;
     display: block;
 }
 
+.stats-bg{
+    background-image: url(img/stats-bg.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 45vw;
+    height: 45vw;
+    display: inline-block;
+    overflow: auto;
+    font-weight: bold;
+    font-size: 1.5vw;
+    color: white;
+    font-family: ds-ui;
+}
+#top-left{
+    grid-area: header;
+}
+#top-right{
+    grid-area: menu;
+}
+#middle-left{
+    grid-area: main;
+}
+#middle-right{
+    grid-area: right;
+}
+#chao{
+    grid-area: footer;
+}
+#stats-grid{
+    display: grid;
+    grid-template:
+    'header menu' 1fr
+    'main right' 1fr
+    'footer footer' 1fr / 1fr 1fr;
+    height: 43vw;
+    width: 43vw;
+    margin: auto;
+    margin-top: 0.4vw;
+    
+}
+.bloco{
+    display: inline-block;
+}
+#name{
+    margin-top: 0.5vw;
+    color: rgb(255, 249, 233);
+    width: 120%;
+}
+.bloco p{
+    height: 2.2vw;
+    line-height: 2.3vw;
+    margin-bottom: 0.7vw;
+    /* background-image: url(img/linha-stats.png);
+    background-size: auto 100%; */
+    /* border-style: none none inset none;
+    border-width: 0.15vw;
+    border-color: #856f41 ;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box; */
+    background-image: linear-gradient(90deg, #856f41 40%, transparent 90%);
+    background-size: 100% 0.2vw;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+#name{
+    margin-top: 0.5vw;
+    color: rgb(255, 249, 233);
+    width: 120%;
+    background-image: linear-gradient(90deg, #856f41 50%, transparent 100%);
+}
+#paineis{
+    display: flex;
+    justify-content: center;
+}
+tr{
+    height: 1.3vw;
+    line-height: 2.2vw;
+    background-image: linear-gradient(90deg, #856f41 60%, transparent 95%);
+    background-size: 100% 0.2vw;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+#top-left td, #middle-left td, #middle-right td{
+    width: 65%;
+}
+td img{
+    vertical-align: -10%;
+    height: 2vw;
+    width: 2vw;
+}
+td p{
+    display: inline-block;
+}
+table{
+    width: 100%;
+    border-spacing: 0;
+}
+#preview{
+    float: right;
+    margin-top: 1vw;
+    margin-right: 3vw;
+    height: 10vw;
+    background-image: url(img/dish.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+.titulo{
+    color: #fcd279;
+}
+#chao p{
+    background-image: linear-gradient(90deg, #856f41 35%, transparent 65%);
+}
+#chao table{
+    display: inline-table;
+    width: 5vw;
+    margin-right: 5vw;
+}
+#req{
+    margin-top: 2vw;
+}
+
+@media (max-width: 1000px){
+    #index-body{
+        background-image: url(img/body-bg-pc.png);
+    }
+    #cat-grid{
+        grid-template-columns: 1fr;
+    }
+    .cat-link{
+        height: 26vw;
+        width: 20vw;
+        font-size: 2.6vw;
+    }
+    .cat{
+        height: 20vw;
+        width: 20vw;
+    }
+    .cat-img{
+        margin-top: 2vw;
+        height: 18vw;
+    }
+}
 @media (max-width: 1200px){
     header{
         background-image: url(img/header2.png);
@@ -129,54 +315,10 @@ a{
     #cabe{
         margin: 0vw 10vw 0vw 10vw;
     }
-    #top{
+    /* #top{
         background-image: url(img/bg-top2.jpg);
-    }
+    } */
 }
-@media (max-width: 800px){
-    .hover-bg{
-        background-image: url(img/hover-bg.png);
-        background-repeat: no-repeat;
-        background-size: 100% 100% ;
-        width: 45vw;
-        height: 45vw;
-        margin: auto;
-        overflow: hidden;
-    }
-    #hover-nome{
-        margin-left: 6.5vw;
-        margin-top: 3.5vw;
-        color: white;
-        font-size: 1.5vw;
-        font-family: ds;
-    
-    }
-    #hover-grid{
-        margin-left: 4.2vw;
-        margin-right: 5.1vw;
-        margin-top: 4vw;
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-    }
-    .icon{
-        background-image: url(img/dish.png);
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        border: 0.8vw solid transparent;
-        border-image: url(img/border.png) 10% stretch;
-        box-sizing: border-box;
-    }
-    .icon-a{
-        display: block;
-        margin: auto;
-    }
-    .hover-foto{
-        margin: auto;
-        width: 5.5vw;
-        display: block;
-    }
-}
-
 @media (max-width: 650px){
     header{
         background-image: url(img/header3.png);
@@ -188,7 +330,69 @@ a{
         font-size: 2.5vh;
     }
     #nome{
-        background-position: 0 3.2vh;
+        background-position: 0 3.4vh;
 
+    }
+    #paineis{
+        display: block;
+    }
+    .hover-bg, .stats-bg{
+        display: block;
+        width: 80vw;
+        height: 80vw;
+        margin: auto;
+    }
+    #hover-nome{
+        margin-left: 11vw;
+        margin-top: 6.5vw;
+        font-size: 2.5vw;
+    }
+    #hover-grid{
+        margin-left: 7.2vw;
+        margin-right: 8.6vw;
+        margin-top: 8vw;
+    }
+    .hover-foto{
+        width: 10vw;
+    }
+    #stats-grid{
+        height: 78vw;
+        width: 76vw;
+        font-size: 3vw;
+    }
+    .bloco p{
+        height: 3vw;
+    }
+    tr{
+        height: 3vw;
+        line-height: 3.5vw;
+    }
+    td img{
+        height: 3vw;
+        width: 3vw;
+    }
+    #preview{
+        height: 15vw;
+    }
+}
+@media (max-width: 480px){
+    header{
+        height: 15vh;
+    }
+    #logo{
+        height: 10vh;
+    }
+    #titulo{
+        font-size: 3vh;
+    }
+    #sub{
+        font-size: 2.5vh;
+    }
+    #nome{
+        background-position: 0 3.4vh;
+
+    }
+    #wc{
+        font-size: 2vh;
     }
 }
